force-app/main/default/objects/PrivacyPermission__c/PrivacyPermission__c.object-meta.xml
<CustomObject>
    <label>Privacy Permission</label>
    <nameField>
        <label>Privacy Permission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Privacy Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>