force-app/main/default/objects/PrivacyPermission__c/fields/CommunicationPreference__c.field-meta.xml
<CustomField>
    <fullName>CommunicationPreference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication Preference</label>
    <referenceTo>CommunicationPreference__c</referenceTo>
    <relationshipLabel>Privacy Permissions</relationshipLabel>
    <relationshipName>PrivacyPermissions</relationshipName>
    <type>Lookup</type>
</CustomField>