force-app/main/default/objects/PrivacyPermission__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Privacy Permissions</relationshipLabel>
    <relationshipName>Privacy_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>