force-app/main/default/objects/PrivacyPermission__c/fields/FormSubmissionId__c.field-meta.xml
<CustomField>
    <fullName>FormSubmissionId__c</fullName>
    <label>FormSubmissionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>