force-app/main/default/objects/PrivacyPermission__c/fields/ListId__c.field-meta.xml
<CustomField>
    <fullName>ListId__c</fullName>
    <inlineHelpText>Use this Id to match the privacy permission to the (existing) Communication Preference. Marketing Cloud links these two based on the ListIds.</inlineHelpText>
    <label>ListId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>