force-app/main/default/objects/PrivacyPermission__c/fields/OldContactId__c.field-meta.xml
<CustomField>
    <fullName>OldContactId__c</fullName>
    <label>OldContact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>