force-app/main/default/objects/PrivacyPermission__c/fields/OldId__c.field-meta.xml
<CustomField>
    <fullName>OldId__c</fullName>
    <externalId>true</externalId>
    <label>Old Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>